style & fix: changes align-items styling, and creates a header to move the title and its subheading to the top of the screen and the body can have its align-items

--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,13 @@
     }
     h1 {
         color: #596a48;
-    };
+        text-align: center;
+    }
     
     p {
         color: #212528;
-    };
+        text-align: center;
+    }
 
     article {
         background-color: #c9c1b6;
